[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nanoranker"
version = "1.2"
authors = [
  { name="Carlo Moro", email="cnmoro@gmail.com" },
]
description = ""
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "onnxruntime",
    "onnxruntime_extensions",
]